# saber

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE.md  MODULE.bazel  Package.resolved  Package.swift  swift_deps_index.json
applications/example/: BUILD.bazel  main.swift
applications/example_application/: BUILD.bazel  LaunchScreen.storyboard
applications/example_application/sources/: ApplicationDelegate.swift  BUILD.bazel  SceneDelegate.swift
applications/test_binary/: BUILD.bazel  main.swift
feature_implementations/authentication_feature_implementation/: AuthenticationFeatureViewController.swift  BUILD.bazel
feature_implementations/bar_feature_implementation/: BUILD.bazel  BarFeatureViewController.swift
feature_implementations/camera_feature_implementation/: BUILD.bazel  CameraViewController.swift
feature_implementations/foo_feature_implementation/: BUILD.bazel  FooFeatureViewController.swift  FooViewController.swift
feature_implementations/inbox_feature_implementation/: BUILD.bazel  InboxViewController.swift
feature_implementations/loading_feature_implementation/: BUILD.bazel  LoadingFeatureViewController.swift  LoadingViewController.swift
feature_implementations/logged_in_feature_implementation/: BUILD.bazel  LoggedInFeatureViewController.swift  LoggedInTabBarController.swift  LoggedInViewController.swift
feature_implementations/logged_out_feature_implementation/: BUILD.bazel  LoggedOutFeatureViewController.swift  LoggedOutViewController.swift
feature_implementations/map_feature_implementation/: BUILD.bazel  MapViewController.swift
feature_implementations/profile_feature_implementation/: BUILD.bazel  ProfileViewController.swift
feature_interfaces/authentication_feature_interface/: AuthenticationFeatureArguments.swift  BUILD.bazel
feature_interfaces/bar_feature_interface/: BUILD.bazel  BarFeatureArguments.swift  BarRoute.swift
feature_interfaces/camera_feature_interface/: BUILD.bazel  CameraArguments.swift  CameraViewControllerArguments.swift
feature_interfaces/foo_feature_interface/: BUILD.bazel  FooFeatureArguments.swift  FooRoute.swift
feature_interfaces/inbox_feature_interface/: BUILD.bazel  InboxArguments.swift
feature_interfaces/loading_feature_interface/: BUILD.bazel  LoadingArguments.swift  LoadingFeature.swift  LoadingFeatureArguments.swift
feature_interfaces/logged_in_feature_interface/: BUILD.bazel  LoggedInArguments.swift  LoggedInFeature.swift  LoggedInFeatureArguments.swift
feature_interfaces/logged_out_feature_interface/: BUILD.bazel  LoggedOutArguments.swift  LoggedOutFeature.swift  LoggedOutFeatureArguments.swift  LoggedOutViewControllerArguments.swift
feature_interfaces/map_feature_interface/: BUILD.bazel  MapArguments.swift  MapViewControllerArguments.swift
feature_interfaces/profile_feature_interface/: BUILD.bazel  ProfileArguments.swift
feature_interfaces/root_feature_interface/: BUILD.bazel  RootFeature.swift  RootFeatureArguments.swift
foundations/dependency_foundation/: BUILD.bazel  Builder.swift  DependencyContainer.swift  DependencyProvider.swift  Factory.swift  FactoryImplementation.swift  Macros.swift  Provider.swift  Route.swift  RouteHandler.swift  Router.swift  Scope.swift  ScopeRouteHandler.swift  StoreImplementation.swift  Type.swift
foundations/dependency_macros_foundation/: BUILD.bazel  BuilderProvider.swift  ScopeViewControllerBuilder.swift  ViewControllerBuilder.swift
foundations/key_foundation/: BUILD.bazel  Name.swift  Namespace.swift  TypedKey.swift
foundations/swift_foundation/: BUILD.bazel  Lazy.swift  Lock.swift  StrongWrapper.swift  WeakWrapper.swift
macros/: BUILD.bazel
macros/dependency_macros/: ArgumentMacroInterface.swift  Arguments.swift  ArgumentsMacroInterface.swift  BUILD.bazel  Factory.swift  FactoryMacroInterface.swift  Initialize.swift  InjectMacroInterface.swift  Injectable.swift  InjectableMacroInterface.swift  Instantiate.swift  Provider.swift  Scope.swift  Store.swift  StoreImplementation.swift  StoreMacroInterface.swift
macros/dependency_macros_library/: ArgumentMacroProtocol.swift  ArgumentsMacroProtocol.swift  AttributeListSyntax+Extensions.swift  AttributeListSyntax.Element+Extensions.swift  AttributeSyntax+Extensions.swift  BUILD.bazel  ConcreteDeclSyntaxProtocol.swift  Constants.swift  DeclModifierListSyntax+Extensions.swift  DependencyStorageTypes.swift  FactoryMacroProtocol.swift  InheritanceClauseSyntax+Extensions.swift  InjectMacroProtocol.swift  InjectableMacroProtocol.swift  InjectableVisitor.swift  Parsers.swift  Property.swift  StoreMacroProtocol.swift  String+Extensions.swift  TypeDescription.swift
macros/dependency_macros_plugin/: ArgumentMacro.swift  ArgumentsMacro.swift  BUILD.bazel  BuilderProviderMacro.swift  DependencyMacrosPlugin.swift  FactoryMacro.swift  InitializeMacro.swift  InjectMacro.swift  InjectableMacro.swift  InstantiateMacro.swift  MacroError.swift  Parsers.swift  ProviderMacro.swift  ScopeViewControllerBuilderMacro.swift  StoreMacro.swift  String+Extensions.swift  ViewControllerBuilderMacro.swift
macros/dependency_macros_plugin_tests/: ArgumentMacroTests.swift  ArgumentsMacroTests.swift  BUILD.bazel  BuilderProviderMacroTests.swift  FactoryMacroTests.swift  InitializeMacroTests.swift  InjectMacroTests.swift  InjectableMacroTests.swift  InstantiateMacroTests.swift  ProviderMacroTests.swift  ScopeFeatureBuilderMacroTests.swift  ScopeViewControllerBuilderMacroTests.swift  StoreMacroTests.swift  ViewControllerBuilderMacroTests.swift
macros/dependency_macros_types/: AccessStrategy.swift  BUILD.bazel  ChildDependenciesReferenceType.swift  DependenciesReferenceType.swift  InitializationStrategy.swift  InjectableType.swift  ReferenceStrategy.swift  ThreadSafetyStrategy.swift
macros/stringify_macro/: BUILD.bazel  Stringify.swift
macros/stringify_macro_consumer/: BUILD.bazel  StringifyMacroConsumer.swift
macros/stringify_macro_plugin/: BUILD.bazel  StringifyMacro.swift  StringifyMacroPlugin.swift
macros/stringify_macro_tests/: BUILD.bazel
plugin_interfaces/immediate_execution_plugin_interface/: BUILD.bazel  (+1 more)
(+269 files in other folders)
