load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_update_packages")

# gazelle directives

# gazelle:swift_module_naming_convention pascal_case
# gazelle:resolve swift DependencyMacrosPlugin //macros/dependency_macros_plugin
# gazelle:exclude .build
# gazelle:exclude .bazel

# gazelle targets

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@bazel_gazelle//language/bazel/visibility",
        "@rules_swift_package_manager//gazelle",
    ],
)

swift_update_packages(
    name = "update_swift_packages",
    gazelle = ":gazelle_bin",
    generate_swift_deps_for_workspace = False,
    update_bzlmod_stanzas = True,
)

gazelle(
    name = "update_build_files",
    gazelle = ":gazelle_bin",
)
