load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

# gazelle directives

# gazelle:swift_module_naming_convention pascal_case
# gazelle:resolve swift SaberPlugin //saber/saber_plugin
# gazelle:exclude .build

# gazelle targets

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@gazelle//language/bazel/visibility",
        "@rules_swift_package_manager//gazelle",
    ],
)

gazelle(
    name = "update_build_files",
    data = [
        "@swift_deps_info//:swift_deps_index",
    ],
    extra_args = [
        "-swift_dependency_index=$(location @swift_deps_info//:swift_deps_index)",
    ],
    gazelle = ":gazelle_bin",
)
