"""
Bazel Modules
"""

# MODULE ##############################################################################################################

module(
    name = "saber",
    version = "0.0.0",
)

# COMMON DEPENDENCIES #################################################################################################

# bazel_skylib

bazel_dep(name = "bazel_skylib", version = "1.7.1")

# rules_go

# TODO: Remove repo_name once gazelle plugin supports loading rules_go with "@rules_go//"
bazel_dep(name = "rules_go", version = "0.47.0", repo_name = "io_bazel_rules_go")

# gazelle

bazel_dep(name = "gazelle", version = "0.37.0")

# IOS DEPENDENCIES ####################################################################################################

# rules_swift

bazel_dep(name = "rules_swift", version = "1.18.0", repo_name = "build_bazel_rules_swift")

# apple_support

bazel_dep(name = "apple_support", version = "1.15.1", repo_name = "build_bazel_apple_support")

# rules_apple

bazel_dep(name = "rules_apple", version = "3.6.0", repo_name = "build_bazel_rules_apple")

# rules_xcodeproj

bazel_dep(name = "rules_xcodeproj", version = "2.4.0")

# rules_swift_package_manager

bazel_dep(name = "rules_swift_package_manager", version = "0.34.1")

# swift_deps START
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swift_deps_info",
    "swiftpkg_swift_argument_parser",
    "swiftpkg_swift_syntax",
)
# swift_deps END
