load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "example",
    srcs = ["main.swift"],
    module_name = "Example",
    visibility = ["//visibility:public"],
    deps = [
        "//service_implementations/foo_service_implementation",
        "//service_interfaces/foo_service_interface",
    ],
)
