load("@build_bazel_rules_apple//apple:ios.bzl", "ios_build_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "bar_feature_implementation",
    srcs = ["BarFeatureViewController.swift"],
    module_name = "BarFeatureImplementation",
    visibility = ["//visibility:public"],
    deps = [
        "//feature_interfaces/bar_feature_interface",
        "//foundations/dependency_foundation",
        "//service_interfaces/bar_service_interface",
    ],
)

ios_build_test(
    name = "bar_feature_implementation_build_test",
    minimum_os_version = "16.0",
    targets = [
        ":bar_feature_implementation",
    ],
)
