load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "inbox_feature_implementation",
    srcs = ["InboxViewController.swift"],
    module_name = "InboxFeatureImplementation",
    visibility = ["//visibility:public"],
    deps = [
        "//feature_interfaces/inbox_feature_interface",
        "//macros/dependency_macros",
        "//service_interfaces/inbox_service_interface",
    ],
)
