load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "loading_feature_implementation",
    srcs = ["LoadingViewController.swift"],
    module_name = "LoadingFeatureImplementation",
    visibility = ["//visibility:public"],
    deps = [
        "//feature_interfaces/loading_feature_interface",
        "//feature_interfaces/logged_in_feature_interface",
        "//feature_interfaces/logged_out_feature_interface",
        "//saber/saber",
        "//service_interfaces/user_service_interface",
        "//service_interfaces/user_session_service_interface",
        "//service_interfaces/window_service_interface",
    ],
)
