load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "logged_in_feature_implementation",
    srcs = ["LoggedInFeatureViewController.swift"],
    module_name = "LoggedInFeatureImplementation",
    visibility = ["//visibility:public"],
    deps = [
        "//feature_interfaces/logged_in_feature_interface",
        "//feature_interfaces/logged_out_feature_interface",
        "//foundations/dependency_foundation",
        "//service_interfaces/user_service_interface",
        "//service_interfaces/user_session_service_interface",
        "//service_interfaces/window_service_interface",
    ],
)
