load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "logged_out_feature_implementation",
    srcs = ["LoggedOutFeatureViewController.swift"],
    module_name = "LoggedOutFeatureImplementation",
    visibility = ["//visibility:public"],
    deps = [
        "//feature_interfaces/logged_out_feature_interface",
        "//foundations/dependency_foundation",
        "//scope_interfaces/loading_scope_interface",
        "//service_interfaces/user_session_service_interface",
    ],
)
