load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "logged_out_feature_implementation",
    srcs = ["LoggedOutViewController.swift"],
    module_name = "LoggedOutFeatureImplementation",
    visibility = ["//visibility:public"],
    deps = [
        "//feature_interfaces/loading_feature_interface",
        "//feature_interfaces/logged_out_feature_interface",
        "//macros/dependency_macros",
        "//service_interfaces/user_session_service_interface",
        "//service_interfaces/window_service_interface",
    ],
)
