load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "map_feature_implementation",
    srcs = ["MapViewController.swift"],
    module_name = "MapFeatureImplementation",
    visibility = ["//visibility:public"],
    deps = [
        "//feature_interfaces/map_feature_interface",
        "//foundations/dependency_foundation",
        "//macros/dependency_macros",
    ],
)
