load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "profile_feature_implementation",
    srcs = ["ProfileViewController.swift"],
    module_name = "ProfileFeatureImplementation",
    visibility = ["//visibility:public"],
    deps = [
        "//feature_interfaces/logged_out_feature_interface",
        "//feature_interfaces/profile_feature_interface",
        "//foundations/dependency_foundation",
        "//macros/dependency_macros",
        "//service_interfaces/user_service_interface",
        "//service_interfaces/user_session_service_interface",
        "//service_interfaces/window_service_interface",
    ],
)
