load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "authentication_feature_interface",
    srcs = ["AuthenticationFeatureArguments.swift"],
    module_name = "AuthenticationFeatureInterface",
    visibility = ["//visibility:public"],
    deps = ["//foundations/dependency_foundation"],
)
