load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "loading_feature_interface",
    srcs = ["LoadingFeatureArguments.swift"],
    module_name = "LoadingFeatureInterface",
    visibility = ["//visibility:public"],
    deps = ["//foundations/dependency_foundation"],
)
