load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "logged_in_feature_interface",
    srcs = ["LoggedInFeatureArguments.swift"],
    module_name = "LoggedInFeatureInterface",
    visibility = ["//visibility:public"],
    deps = ["//foundations/dependency_foundation"],
)
