load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "logged_in_feature_interface",
    srcs = ["LoggedInArguments.swift"],
    module_name = "LoggedInFeatureInterface",
    visibility = ["//visibility:public"],
    deps = [
        "//service_interfaces/user_service_interface",
        "//service_interfaces/user_session_service_interface",
    ],
)
