load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "logged_out_feature_interface",
    srcs = ["LoggedOutFeature.swift"],
    module_name = "LoggedOutFeatureInterface",
    visibility = ["//visibility:public"],
    deps = [
        "//foundations/dependency_foundation",
        "//foundations/dependency_macros_foundation",
    ],
)
