load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "root_feature_interface",
    srcs = ["RootFeatureArguments.swift"],
    module_name = "RootFeatureInterface",
    visibility = ["//visibility:public"],
    deps = ["//foundations/dependency_foundation"],
)
