load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "dependency_foundation",
    srcs = [
        "Builder.swift",
        "DependencyContainer.swift",
        "DependencyProvider.swift",
        "Macros.swift",
        "Scope.swift",
    ],
    module_name = "DependencyFoundation",
    plugins = ["//macros/dependency_macros_plugin"],
    visibility = ["//visibility:public"],
    deps = ["//foundations/swift_foundation"],
)
