load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "dependency_foundation",
    srcs = [
        "Builder.swift",
        "DependencyContainer.swift",
        "DependencyProvider.swift",
        "Scope.swift",
    ],
    module_name = "DependencyFoundation",
    visibility = ["//visibility:public"],
    deps = ["//foundations/swift_foundation"],
)
