load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

package(default_visibility = ["//visibility:public"])

swift_library(
    name = "dependency_macros",
    srcs = [
        "Arguments.swift",
        "Factory.swift",
        "Inject.swift",
        "Injectable.swift",
        "Store.swift",
    ],
    module_name = "DependencyMacros",
    plugins = ["//macros/dependency_macros_plugin"],
    visibility = ["//visibility:public"],
    deps = ["//macros/dependency_macros_types"],
)
