load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

package(default_visibility = ["//visibility:public"])

swift_library(
    name = "dependency_macros",
    srcs = [
        "ArgumentMacroInterface.swift",
        "Factory.swift",
        "FactoryImplementation.swift",
        "FactoryMacroInterface.swift",
        "InjectMacroInterface.swift",
        "Injectable.swift",
        "InjectableMacroInterface.swift",
        "Store.swift",
        "StoreImplementation.swift",
        "StoreMacroInterface.swift",
    ],
    module_name = "DependencyMacros",
    plugins = ["//macros/dependency_macros_plugin"],
    visibility = ["//visibility:public"],
    deps = ["//macros/dependency_macros_types"],
)
