load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

package(default_visibility = ["//visibility:public"])

swift_library(
    name = "dependency_macros_library",
    srcs = [
        "ArgumentMacroProtocol.swift",
        "AttributeListSyntax.Element+Extensions.swift",
        "AttributeListSyntax+Extensions.swift",
        "AttributeSyntax+Extensions.swift",
        "ConcreteDeclSyntaxProtocol.swift",
        "DeclModifierListSyntax+Extensions.swift",
        "FactoryMacroProtocol.swift",
        "InheritanceClauseSyntax+Extensions.swift",
        "InjectMacroProtocol.swift",
        "InjectableMacroProtocol.swift",
        "InjectableVisitor.swift",
        "MacroError.swift",
        "Property.swift",
        "StoreMacroProtocol.swift",
        "String+Extensions.swift",
        "TypeDescription.swift",
    ],
    module_name = "DependencyMacrosLibrary",
    visibility = ["//visibility:public"],
    deps = [
        "//macros/dependency_macros_types",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros",
    ],
)
