load("@build_bazel_rules_swift//swift:swift_compiler_plugin.bzl", "swift_compiler_plugin")

package(default_visibility = ["//visibility:public"])

swift_compiler_plugin(
    name = "dependency_macros_plugin",
    srcs = [
        "BuilderProviderMacro.swift",
        "DependencyMacrosPlugin.swift",
        "MacroError.swift",
        "Parsers.swift",
        "ProviderMacro.swift",
        "String+Extensions.swift",
    ],
    module_name = "DependencyMacrosPlugin",
    visibility = ["//visibility:public"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftCompilerPlugin",
        "@swiftpkg_swift_syntax//:SwiftSyntax",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros",
    ],
)
