load("@build_bazel_rules_swift//swift:swift_compiler_plugin.bzl", "swift_compiler_plugin")

package(default_visibility = ["//visibility:public"])

swift_compiler_plugin(
    name = "dependency_macros_plugin",
    srcs = [
        "ArgumentMacro.swift",
        "ArgumentsMacro.swift",
        "DependencyMacrosPlugin.swift",
        "FactoryMacro.swift",
        "InjectMacro.swift",
        "InjectableMacro.swift",
        "StoreMacro.swift",
    ],
    module_name = "DependencyMacrosPlugin",
    visibility = ["//visibility:public"],
    deps = [
        "//macros/dependency_macros_library",
        "@swiftpkg_swift_syntax//:SwiftCompilerPlugin",
        "@swiftpkg_swift_syntax//:SwiftSyntax",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros",
    ],
)
