load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

package(default_visibility = ["//visibility:public"])

swift_test(
    name = "dependency_macros_plugin_tests",
    srcs = [
        "ArgumentsMacroTests.swift",
        "FactoryMacroTests.swift",
        "InitializeMacroTests.swift",
        "InjectMacroTests.swift",
        "InjectableMacroTests.swift",
        "ScopeViewControllerBuilderMacroTests.swift",
        "StoreMacroTests.swift",
        "ViewControllerBuilderMacroTests.swift",
    ],
    module_name = "DependencyMacrosPluginTests",
    visibility = ["//visibility:public"],
    deps = [
        "//foundations/dependency_foundation",
        "//macros/dependency_macros_plugin",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacrosTestSupport",
    ],
)
