load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

package(default_visibility = ["//visibility:public"])

swift_test(
    name = "dependency_macros_plugin_tests",
    srcs = [
        "ArgumentMacroTests.swift",
        "FactoryMacroTests.swift",
        "InjectMacroTests.swift",
        "InjectableMacroTests.swift",
        "StoreMacroTests.swift",
    ],
    module_name = "DependencyMacrosPluginTests",
    visibility = ["//visibility:public"],
    deps = [
        "//macros/dependency_macros_plugin",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacrosTestSupport",
    ],
)
