load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "dependency_macros_types",
    srcs = [
        "InitializationStrategy.swift",
        "ReferenceStrategy.swift",
    ],
    module_name = "DependencyMacrosTypes",
    visibility = ["//visibility:public"],
)

package(default_visibility = ["//visibility:public"])
