load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

package(default_visibility = ["//visibility:public"])

swift_library(
    name = "dependency_macros_types",
    srcs = [
        "InitializationStrategy.swift",
        "InjectableType.swift",
        "StorageStrategy.swift",
    ],
    module_name = "DependencyMacrosTypes",
    visibility = ["//visibility:public"],
)
